Added workaround for opencv

--- a/uuv_sensor_plugins/uuv_sensor_plugins/CMakeLists.txt
+++ b/uuv_sensor_plugins/uuv_sensor_plugins/CMakeLists.txt
@@ -12,6 +12,22 @@ find_package(Eigen3 REQUIRED)
 find_package(gazebo REQUIRED)
 find_package(OGRE REQUIRED)
 find_package(OpenCV REQUIRED)
+if (${OpenCV_VERSION} MATCHES "3.3.1")
+  foreach(__cvcomponent ${OpenCV_LIB_COMPONENTS})
+    set (__original_cvcomponent ${__cvcomponent})
+    if(NOT __cvcomponent MATCHES "^opencv_")
+      set(__cvcomponent opencv_${__cvcomponent})
+    endif()
+    if (TARGET ${__cvcomponent})
+      set_target_properties(${__cvcomponent} PROPERTIES
+          MAP_IMPORTED_CONFIG_DEBUG ""
+          MAP_IMPORTED_CONFIG_RELEASE ""
+          MAP_IMPORTED_CONFIG_RELWITHDEBINFO ""
+          MAP_IMPORTED_CONFIG_MINSIZEREL ""
+      )
+    endif()
+  endforeach(__cvcomponent)
+endif()
 find_package(Protobuf REQUIRED)
 
 add_definitions(-std=c++11)
