--- a/uuv_gazebo_plugins/uuv_gazebo_plugins/package.xml
+++ b/uuv_gazebo_plugins/uuv_gazebo_plugins/package.xml
@@ -19,7 +19,11 @@
   <build_depend>gazebo</build_depend>  
   <build_depend>protobuf-dev</build_depend>
   <build_depend>eigen</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
 
+  <run_depend>roscpp</run_depend>
+  <run_depend>std_msgs</run_depend>
   <run_depend>gazebo</run_depend>  
   <run_depend>protobuf-dev</run_depend>
   <run_depend>eigen</run_depend>
